syntax = "proto3";
package session;

// StreamInit initializes a stream.
// packet_type: 1, expected as first message on stream
message StreamInit {
  // Stream type is the kind of the stream.
  uint32 stream_type = 1;
}
